# Auto-Vicuna

./: .coveragerc  .gitignore  InteractiveManual.ipynb  LICENSE  README.md  convert_llama_names.py  pyproject.toml  requirements.txt
src/auto_vicuna/: __main__.py  chat.py  conversation.py  loop.py  model.py  plugins.py
